# playground-rocket

./: .env  Cargo.toml  Dockerfile  LICENSE  Rocket.toml  nutrition.service  readme.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: cors.rs  data.rs  lib.rs  main.rs  models.rs  schema.rs
