[package]
name = "playground-rocket"
version = "1.0.4"
authors = ["Stefan Weisser <stefan.weisser@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

diesel = { version = "1.4.3", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
prometheus = "0.9.0"
rocket_prometheus = "0.6.0"
once_cell = "1.3.1"

# Swagger / OpenAPI
# Careful with the versions! If you get macro errors, this is likely the cause!
# Always check for matching versions using "cargo tree".
rocket_okapi = "0.5.0-alpha-1"
schemars = "0.7.6"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["diesel_sqlite_pool", "json"]
