[package]
name = "playground-rocket"
version = "1.0.4"
authors = ["Stefan Weisser <stefan.weisser@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"

serde = { version = "1.0.145", features = ["derive"] }
serde_derive = "1.0.145"
serde_json = "1.0.86"

diesel = { version = "2.0.2", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
prometheus = "0.13.2"
rocket_prometheus = "0.9.0"
once_cell = "1.3.1"

# Swagger / OpenAPI
# Careful with the versions! If you get macro errors, this is likely the cause!
# Always check for matching versions using "cargo tree" or at the crate docs site (choose the version of rocket_okapi
# then check its dependencies there.)
rocket_okapi = "0.5.1"
schemars = "0.8.11"
okapi = { version = "0.4.0", features = ["derive_json_schema"] }

# OAuth 2.0
oauth2 = "4.0.0-alpha.1"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["diesel_sqlite_pool", "json"]
